--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div class="content">
+        <div class="game-board"></div>
+        <div class="turns"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
