--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="content">
-        <div class="game-board"></div>
+        <div class="board"></div>
         <div class="turns"></div>
     </div>
     <script src="script.js"></script>
