--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="content">
         <div class="board"></div>
-        <div class="turns"></div>
+        <div class="turn"></div>
     </div>
     <script src="script.js"></script>
 </body>
