--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
         <div class="board"></div>
-        <div class="text"></div>
+        <div class="message"></div>
     </div>
     <script src="script.js"></script>
 </body>
